@@ -1,4 +1,8 @@
-EB-2003-01-23-0  Bugfix:    qalter shows wrong priority number when using
+AH-2003-01-22-0  Bugfix:    STRING complex attribute handling with RELOP "!=" is broken
+                 IZ:        #450
+                 Bugtraq:   #4805423 
+
+EB-2003-01-22-0  Bugfix:    qalter shows wrong priority number when using
                             negative priorities with -p option
                  IZ:        #403
                  Bugtraq:   #4769608
